# delaunay3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
delaunay/: builder.cpp  builder.hpp  delaunay.cpp  delaunay.hpp
utils/: eigen.hpp  log.hpp
wasm/: api.cpp  build.sh
web/: index.html  package-lock.json  package.json
web/public/: delaunay3d.wasm
web/src/: main.ts  viewer.ts
